Changes since CEXP-1.5
 2008/4/17:
 - new LICENSE; we now use the SLAC license instead of the EPICS open
   license.
 2008/4/16:
 - removed support for libelf; we now use pmelf when appropriate.
 - added multilib support. libcexp, libtecla, libspencer_regexp and
   libpmbfd/libpmelf can be built as multilibs.
   NOTE: 'real' BFD does not support multilibs and hence we cannot
   use them if BFD is to be used.
 2008/4/15:
 - added Makefile.am/configure.ac magic to support new pmelf.
   FIXME: THIS NEEDS CLEANUP
 - xsyms-bfd.c now also can use pmbfd/pmelf. (But for binary symbol
   table generation objcopy --extract-symbol should be used.)
 2008/4/15:
 - (cexp.c): improved trivial 'readline' emulation (when no tecla or readline
   is configured) by switching terminal to RAW mode; we can then use backspace
   for erasing chars, CTRL-U to kill a line, ...
 2008/4/7:
 - (bfdstuff.c): 
   o access members of asection struct only through bfd_get_section_xxx()
     and bfd_set_section_xxx() macros.
   o changed code to read ELF specific symbol parameters from macros
     into inlines and renamed them.
   o BUGFIX: I believe the alignment of new common symbols was not
     determined correctly; the alignment is stored in the symbol value
	 (not size). We now use internal_elf_sym->st_value as the alignment.
   o silenced some compiler warnings (bad printf format string) by
     using l modifier and explicit casts to long variants.
   o NEW: Added test when loading common symbols to make sure that the
     alignment and size of a common symbol with the same name defined
	 in a new module matches the respective parameters of an existing
	 definition (created by previously loaded module).
   o BUGFIX: (bug triggered only if DEBUG & DEBUG_COMMON) when printing
     name of a new common symbol we must not use the name field of
	 the newly created empty symbol (which is NULL) but the name of
	 the existing symbol which is about to be cloned.